# service_queue

./: .gitlab-ci.yml  .pre-commit-config.yaml  Jenkinsfile  README.md  gitlab-ci.yml  pyproject.toml
consumer/: .env.schema  Dockerfile  README.md  config.py  connection_handler.py  consumer.py  internal_requirements.txt  job.py  main.py  main_backup.py  receiver.py  requirements.txt
consumer/logger_services/: formatter.py  logger_factory_service.py  namespace_declare.py
consumer/pipelines/: bids_validate.py  data_copy.py  data_move.py  tvb_c_copy.py
kubernetes/: consumer-deployment.yaml  producer-deployment.yaml  socketio-deployment.yaml
producer/: .env.schema  Dockerfile  README.md  app.py  config.py  docker-compose.yml  gunicorn_config.py  gunicorn_starter.sh  internal_requirements.txt  requirements.txt  start.py
producer/app/: __init__.py
producer/app/api/: __init__.py  pub.py  root.py  sub.py
producer/app/broker/: consumer_dynamic.py  consumer_pool.py  pubsub.py  rabbit_operator.py  sub_list.json  sub_list.py
producer/app/queue_op/: __init__.py  connection_handler.py  message.py  producer.py  producer_project.py
producer/models/: api_response.py  singleton.py
producer/queue_op/: __init__.py  connection_handler.py  message.py  producer.py  producer_project.py  sender.py
socketio/: .env.schema  Dockerfile  README.md  config.py  internal_requirements.txt  message_queue.py  requirements.txt  run.py
